tests/error/errors_on_usage/while_new_var_functional.py
from guppylang.decorator import guppy


@guppy
def foo(x: bool) -> int:
    _@functional
    while x:
        y = 5
    return y
